jacoco + swagger project 93/100 done