@@ -1,13 +1,14 @@
 package com.example.accesscontrol.service;
 
 import com.example.accesscontrol.entity.User;
+import com.example.accesscontrol.exception.UserNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
+
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,18 +19,16 @@ public class CustomUserDetailsService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        User user = userService.getByEmailOrThrow(email);
-
-        List<String> roleNames = userRoleService.getRoleNamesByUserId(user.getId());
-
+        User u = userService.getByEmailOrThrow(email);
+        List<String> roleNames = userRoleService.getRoleNamesByUserId(u.getId());
         List<GrantedAuthority> authorities = roleNames.stream()
-                .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                .collect(Collectors.toList());
+                .map(role -> (GrantedAuthority) new SimpleGrantedAuthority("ROLE_" + role))
+                .toList();
 
         return org.springframework.security.core.userdetails.User.builder()
-                .username(user.getEmail())
-                .password(user.getPassword())
-                .disabled(!user.isEnabled())
+                .username(u.getEmail())
+                .password(u.getPassword())
+                .disabled(!u.isEnabled())
                 .authorities(authorities)
                 .build();
     }
